@@ -10,14 +10,15 @@ require_once( dirname(__FILE__) . '/../../../functions/functions.php' );
 # initialize user object
 $Database 	= new Database_PDO;
 $User 		= new User ($Database);
-$Admin	 	= new Admin ($Database);
+$Admin	 	= new Admin ($Database, false);
 $Tools	 	= new Tools ($Database);
 $Racks      = new phpipam_rack ($Database);
 $Result 	= new Result ();
 
 # verify that user is logged in
 $User->check_user_session();
-
+# verify module permissions
+$User->check_module_permissions ("racks", 2, true, true);
 # strip input tags
 $_POST = $Admin->strip_input_tags($_POST);
 
