@@ -218,7 +218,7 @@ else {
 			$device = $Tools->fetch_object("devices", "id", $subnet['device']);
 			if ($device!==false) {
     			# rack
-    			if ($User->settings->enableRACK=="1" && strlen($device->rack)>0) {
+    			if ($User->settings->enableRACK=="1" && strlen($device->rack)>0 && $User->get_module_permissions ("racks")>1) {
         			$rack = $Tools->fetch_object("racks", "id", $device->rack);
         			$rack_text = $rack===false ? "" : "<br><span class='badge badge1 badge5' style='padding-top:4px;'>$rack->name / "._('Position').": $device->rack_start "._("Size").": $device->rack_size U <i class='btn btn-default btn-xs fa fa-server showRackPopup' data-rackId='$rack->id' data-deviceId='$device->id'></i></span>";
     			}
