@@ -14,6 +14,8 @@ $Result 	= new Result ();
 
 # verify that user is logged in
 $User->check_user_session();
+# verify module permissions
+$User->check_module_permissions ("racks", 1, true);
 
 # init racks object
 $Racks = new phpipam_rack ($Database);
