@@ -6,6 +6,8 @@
 
 # verify that user is logged in
 $User->check_user_session();
+# verify module permissions
+$User->check_module_permissions ("racks", 1, true);
 ?>
 
 <?php
@@ -119,8 +121,10 @@ else {
             // links
             print " <td class='actions'>";
             print " <div class='btn-group'>";
+            if($User->get_module_permissions ("racks")>2)
             print "     <a href='' class='btn btn-xs btn-default editRack' data-action='edit'   data-rackid='$r->id'><i class='fa fa-pencil'></i></a>";
             print "     <a href='' class='btn btn-xs btn-default showRackPopup' data-rackId='$r->id' data-deviceId='0'><i class='fa fa-server'></i></a>";
+            if($User->get_module_permissions ("racks")>2)
             print "     <a href='' class='btn btn-xs btn-default editRack' data-action='delete' data-rackid='$r->id'><i class='fa fa-times'></i></a>";
             print " </div>";
             print " </td>";
