@@ -6,6 +6,8 @@
 
 # verify that user is logged in
 $User->check_user_session();
+# verify module permissions
+$User->check_module_permissions ("racks", 1, true);
 ?>
 
 <?php
@@ -104,7 +106,5 @@ else {
                 }
             }
         }
-
-
     }
 }
