@@ -18,6 +18,8 @@ $Result 	= new Result ();
 # verify that user is logged in
 $User->check_user_session();
 
+# verify module permissions
+$User->check_module_permissions ("racks", 1, true, true);
 
 # check that rack support isenabled
 if ($User->settings->enableRACK!="1") {
